changed color of background, checking merging

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,6 @@
 *{
-    background-color: gray;
-    background: gray;
+    background-color: rgb(64, 80, 122);
+    background: rgb(64, 80, 122);
+    color: white
 
 }
